Add support for optional Alerting configs

--- a/charts/trento-server/charts/trento-web/templates/deployment.yaml
+++ b/charts/trento-server/charts/trento-web/templates/deployment.yaml
@@ -50,6 +50,26 @@ spec:
               value: "ecto://postgres:postgres@{{ .Release.Name }}-{{ .Values.global.postgresql.name }}/trento"
             - name: EVENTSTORE_URL
               value: "ecto://postgres:postgres@{{ .Release.Name }}-{{ .Values.global.postgresql.name }}/trento_event_store"
+            # TODO: actual runner integration
+            - name: RUNNER_URL
+              value: "http://localhost:8080"
+            {{ if .Values.alerting.enabled }}
+            - name: SMTP_SERVER
+              value: "{{ .Values.alerting.smtpServer }}"
+            - name: SMTP_PORT
+              value: "{{ .Values.alerting.smtpPort }}"
+            - name: SMTP_USER
+              value: "{{ .Values.alerting.smtpUser }}"
+            - name: SMTP_PASSWORD
+              value: "{{ .Values.alerting.smtpPassword }}"
+            - name: ALERT_RECIPIENT
+              value: "{{ .Values.alerting.recipient }}"
+            {{ end }}
+            # TODO: actual grafana integration
+            - name: GRAFANA_API_URL
+              value: "http://{{ .Release.Name }}-{{ .Values.global.grafana.name }}"
+            - name: GRAFANA_PASSWORD
+              value: {{ $grafanaSecret | b64dec }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           args: ['eval', 'Trento.Release.init()']
