--- a/charts/trento-server/charts/trento-runner/values.yaml
+++ b/charts/trento-server/charts/trento-runner/values.yaml
@@ -15,8 +15,8 @@ replicaCount: 1
 
 image:
   repository: ghcr.io/trento-project/trento-runner
-  pullPolicy: IfNotPresent
-  tag: "0.9.1"
+  pullPolicy: Always
+  tag: "rolling"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -33,10 +33,12 @@ serviceAccount:
 
 podAnnotations: {}
 
-podSecurityContext: {}
+podSecurityContext:
+  {}
   # fsGroup: 2000
 
-securityContext: {}
+securityContext:
+  {}
   # capabilities:
   #   drop:
   #   - ALL
@@ -44,10 +46,15 @@ securityContext: {}
   # runAsNonRoot: true
   # runAsUser: 1000
 
+service:
+  type: ClusterIP
+  port: 4000
+
 ingress:
   enabled: false
   className: ""
-  annotations: {}
+  annotations:
+    {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
@@ -60,7 +67,8 @@ ingress:
   #    hosts:
   #      - chart-example.local
 
-resources: {}
+resources:
+  {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
