--- a/charts/trento-server/Chart.yaml
+++ b/charts/trento-server/Chart.yaml
@@ -1,12 +1,12 @@
-#!BuildTag: trento/trento-server:0.4.4
-#!BuildTag: trento/trento-server:0.4.4-build%RELEASE%
+#!BuildTag: trento/trento-server:0.5.0
+#!BuildTag: trento/trento-server:0.5.0-build%RELEASE%
 apiVersion: v2
 name: trento-server
 description: The trento server chart contains all the components necessary to run a Trento server.
 type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates
-version: 0.4.4-dev
+version: 0.5.0
 
 dependencies:
   - name: trento-web
