Adds admin user to the init container and generate password if not provided

--- a/charts/trento-server/charts/trento-web/templates/secret.yaml
+++ b/charts/trento-server/charts/trento-web/templates/secret.yaml
@@ -6,3 +6,5 @@ type: Opaque
 data:
   SECRET_KEY_BASE: {{ include "trento.web.secretKeyBase" . | quote }}
   SMTP_PASSWORD: {{ .Values.alerting.smtpPassword | b64enc | quote }}
+  ADMIN_USER: {{ .Values.adminUser.username | b64enc | quote}}
+  ADMIN_PASSWORD: {{ include "trento.web.adminPassword" . | quote }}
