Use value specified admin password in trento-web secret

--- a/charts/trento-server/charts/trento-web/templates/secret.yaml
+++ b/charts/trento-server/charts/trento-web/templates/secret.yaml
@@ -7,4 +7,4 @@ data:
   SECRET_KEY_BASE: {{ include "trento.web.secretKeyBase" . | quote }}
   SMTP_PASSWORD: {{ .Values.alerting.smtpPassword | b64enc | quote }}
   ADMIN_USER: {{ .Values.adminUser.username | b64enc | quote}}
-  ADMIN_PASSWORD: {{ include "trento.web.adminPassword" . | quote }}
+  ADMIN_PASSWORD: {{- if .Values.adminUser.password }} {{ .Values.adminUser.password | b64enc | quote }}{{- else }} {{ include "trento.web.adminPassword" . | quote }}{{- end}}
