Enable CI conditions in the new job

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -137,9 +137,9 @@ jobs:
           osc commit -m "New development version of ${{ matrix.charts }}-helm released"
 
   obs-commit-installer:
-    #needs: [test-helm-charts]
+    needs: [test-helm-charts]
     runs-on: ubuntu-20.04
-    #if: github.ref == 'refs/heads/main' || github.event_name == 'release'
+    if: github.ref == 'refs/heads/main' || github.event_name == 'release'
     container:
       image: ghcr.io/trento-project/continuous-delivery:master
       env:
