--- a/packaging/suse/config/installer.conf
+++ b/packaging/suse/config/installer.conf
@@ -1,5 +1,7 @@
 TRENTO_CHART_PATH="oci://registry.suse.com/trento/trento-server"
 TRENTO_WEB_IMAGE="registry.suse.com/trento/trento-web"
+TRENTO_WEB_VERSION="%TRENTO_WEB_VERSION%"
 TRENTO_RUNNER_IMAGE="registry.suse.com/trento/trento-runner"
+TRENTO_RUNNER_VERSION="1.0.0"
 ROLLING=false
 DOWNLOAD_CHART=false
