--- a/charts/trento-server/charts/trento-runner/values.yaml
+++ b/charts/trento-server/charts/trento-runner/values.yaml
@@ -15,8 +15,8 @@ replicaCount: 1
 
 image:
   repository: ghcr.io/trento-project/trento-runner
-  pullPolicy: Always
-  tag: "rolling"
+  pullPolicy: IfNotPresent
+  tag: 1.0.0
 
 imagePullSecrets: []
 nameOverride: ""
