Add prometheus url evn variable

--- a/charts/trento-server/charts/trento-web/templates/configmap.yaml
+++ b/charts/trento-server/charts/trento-web/templates/configmap.yaml
@@ -14,3 +14,4 @@ data:
   ALERT_RECIPIENT: "{{ .Values.alerting.recipient }}"
   GRAFANA_PUBLIC_URL: "/grafana"
   GRAFANA_API_URL: "http://{{ .Release.Name }}-{{ .Values.global.grafana.name }}/api"
+  PROMETHEUS_URL: "http://{{ .Release.Name }}-{{ .Values.global.prometheus.name }}"
