--- a/charts/trento-server/Chart.yaml
+++ b/charts/trento-server/Chart.yaml
@@ -1,13 +1,13 @@
 # SPDX-License-Identifier: Apache-2.0
-#!BuildTag: trento/trento-server:1.0.0
-#!BuildTag: trento/trento-server:1.0.0-build%RELEASE%
+#!BuildTag: trento/trento-server:1.0.2
+#!BuildTag: trento/trento-server:1.0.2-build%RELEASE%
 apiVersion: v2
 name: trento-server
 description: The trento server chart contains all the components necessary to run a Trento server.
 type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates
-version: 1.0.1
+version: 1.0.2
 
 dependencies:
   - name: trento-web
@@ -17,7 +17,7 @@ dependencies:
     version: ">0.0.0"
     condition: trento-runner.enabled
   - name: postgresql
-    version: ~10.1.4
+    version: 11.x.x
     repository: https://charts.bitnami.com/bitnami/
     condition: postgresql.enabled
   - name: prometheus
