--- a/charts/trento-server/Chart.yaml
+++ b/charts/trento-server/Chart.yaml
@@ -7,7 +7,7 @@ description: The trento server chart contains all the components necessary to ru
 type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates
-version: 1.1.1-dev
+version: 1.1.1-dev.1
 
 dependencies:
   - name: trento-web
@@ -28,3 +28,7 @@ dependencies:
     version: ~6.36.1
     repository: https://grafana.github.io/helm-charts/
     condition: grafana.enabled
+  - name: rabbitmq
+    version: ~10.3.9
+    repository: https://charts.bitnami.com/bitnami/
+    condition: rabbitmq.enabled
