--- a/charts/trento-server/charts/wanda/Chart.yaml
+++ b/charts/trento-server/charts/wanda/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: wanda
-description: A Helm chart for Kubernetes
+description: Wanda chart
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -16,9 +16,3 @@ type: application
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
 version: 0.1.0
-
-# This is the version number of the application being deployed. This version number should be
-# incremented each time you make changes to the application. Versions are not expected to
-# follow Semantic Versioning. They should reflect the version the application is using.
-# It is recommended to use it with quotes.
-appVersion: "1.16.0"
