--- a/charts/trento-server/Chart.yaml
+++ b/charts/trento-server/Chart.yaml
@@ -7,7 +7,7 @@ description: The trento server chart contains all the components necessary to ru
 type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates
-version: 1.1.1-dev.1
+version: 1.1.1-dev.2
 
 dependencies:
   - name: trento-web
@@ -16,6 +16,9 @@ dependencies:
   - name: trento-runner
     version: ">0.0.0"
     condition: trento-runner.enabled
+  - name: wanda
+    version: ">0.0.0"
+    condition: wanda.enabled
   - name: postgresql
     version: 10.x.x
     repository: https://charts.bitnami.com/bitnami/
