fix workflow name

--- a/.github/workflows/dependabot_auto_merge.yaml
+++ b/.github/workflows/dependabot_auto_merge.yaml
@@ -5,7 +5,7 @@ on:
     types:
       - completed
     workflows:
-      - Continuous Integration and Demo Deployment
+      - Continuous Integration
 
 jobs:
   auto-merge:
