use manual obs service mode

--- a/packaging/suse/trento-server/Makefile
+++ b/packaging/suse/trento-server/Makefile
@@ -9,7 +9,7 @@ verify-deps:
 clean:
 	rm -f *.tar
 tar:
-	osc service disabledrun
+	osc service manualrun
 	tmpdir=$$(mktemp -d -p .) && \
       pushd $$tmpdir && \
       tar -xf ../$(NAME).tar && \
