--- a/charts/trento-server/Chart.yaml
+++ b/charts/trento-server/Chart.yaml
@@ -20,7 +20,7 @@ dependencies:
     version: ">0.0.0"
     condition: wanda.enabled
   - name: postgresql
-    version: 10.x.x
+    version: ~12.1.6
     repository: https://charts.bitnami.com/bitnami/
     condition: postgresql.enabled
   - name: prometheus
