--- a/charts/trento-server/Chart.yaml
+++ b/charts/trento-server/Chart.yaml
@@ -1,13 +1,13 @@
 # SPDX-License-Identifier: Apache-2.0
-#!BuildTag: trento/trento-server:1.2.0
-#!BuildTag: trento/trento-server:1.2.0-build%RELEASE%
+#!BuildTag: trento/trento-server:1.2.1
+#!BuildTag: trento/trento-server:1.2.1-build%RELEASE%
 apiVersion: v2
 name: trento-server
 description: The trento server chart contains all the components necessary to run a Trento server.
 type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates
-version: 1.2.0
+version: 1.2.1
 
 dependencies:
   - name: trento-web
@@ -20,7 +20,7 @@ dependencies:
     version: ">0.0.0"
     condition: wanda.enabled
   - name: postgresql
-    version: 10.x.x
+    version: ~12.1.6
     repository: https://charts.bitnami.com/bitnami/
     condition: postgresql.enabled
   - name: prometheus
