--- a/charts/trento-server/Chart.yaml
+++ b/charts/trento-server/Chart.yaml
@@ -20,8 +20,7 @@ dependencies:
     version: ">0.0.0"
     condition: wanda.enabled
   - name: postgresql
-    version: ~12.1.6
-    repository: https://charts.bitnami.com/bitnami/
+    version: ">0.0.0"
     condition: postgresql.enabled
   - name: prometheus
     version: ~15.1.3
