Add the env variable for new authentication system of trento-web project

--- a/charts/trento-server/charts/trento-web/templates/secret.yaml
+++ b/charts/trento-server/charts/trento-web/templates/secret.yaml
@@ -5,6 +5,8 @@ metadata:
 type: Opaque
 data:
   SECRET_KEY_BASE: {{ include "trento.web.secretKeyBase" . | quote }}
+  ACCESS_TOKEN_ENC_SECRET: {{ include "trento.web.accessTokenSecret" . | quote }}
+  REFRESH_TOKEN_ENC_SECRET: {{ include "trento.web.refreshTokenSecret" . | quote }}
   SMTP_PASSWORD: {{ .Values.alerting.smtpPassword | b64enc | quote }}
   ADMIN_USER: {{ .Values.adminUser.username | b64enc | quote}}
   ADMIN_PASSWORD: {{- if .Values.adminUser.password }} {{ .Values.adminUser.password | b64enc | quote }}{{- else }} {{ include "trento.web.adminPassword" . | quote }}{{- end}}
