--- a/charts/trento-server/charts/trento-wanda/Chart.yaml
+++ b/charts/trento-server/charts/trento-wanda/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: wanda
-description: Wanda chart
+name: trento-wanda
+description: Trento Wanda chart
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -15,4 +15,4 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.0
+version: 0.1.0-dev1
