--- a/charts/trento-server/charts/trento-wanda/templates/secret.yaml
+++ b/charts/trento-server/charts/trento-wanda/templates/secret.yaml
@@ -5,3 +5,4 @@ metadata:
 type: Opaque
 data:
   SECRET_KEY_BASE: {{ include "trento-wanda.secretKeyBase" . | quote }}
+  ACCESS_TOKEN_ENC_SECRET: {{ include "trento-wanda.accessTokenSecret" . | quote }}
