--- a/charts/trento-server/charts/trento-wanda/values.yaml
+++ b/charts/trento-server/charts/trento-wanda/values.yaml
@@ -53,16 +53,15 @@ service:
   port: 4000
 
 ingress:
-  enabled: false
+  enabled: true
   className: ""
   annotations:
-    {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+    kubernetes.io/ingress.class: "traefik"
+    kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
+    - host: ""
       paths:
-        - path: /
+        - path: /api/checks
           pathType: ImplementationSpecific
   tls: []
   #  - secretName: chart-example-tls
