Share JWT token

--- a/charts/trento-server/charts/trento-wanda/templates/deployment.yaml
+++ b/charts/trento-server/charts/trento-wanda/templates/deployment.yaml
@@ -48,6 +48,8 @@ spec:
                 name: {{ include "trento-wanda.fullname" . }}-configmap
             - secretRef:
                 name: {{ include "trento-wanda.fullname" . }}-secret
+            - secretRef:
+                name: {{ .Release.Name }}-auth-tokens-secret
           ports:
             - name: http
               containerPort: {{ template "trentoWanda.port" . }}
